php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26548 Malformed HTTP dates in headers
Submitted: 2003-12-07 09:04 UTC Modified: 2003-12-07 09:26 UTC
From: phpnet at shredzone dot de Assigned: derick (profile)
Status: Closed Package: Output Control
PHP Version: 4.3.3 OS: Linux
Private report: No CVE-ID: None
 [2003-12-07 09:04 UTC] phpnet at shredzone dot de
Description:
------------
If PHP generates headers containing a date, some of these dates are not RFC 2616 (Sect. 3.3.1) / RFC 1123 compliant.

The RFCs require the day, hour, minute and second to have 2 digits (i.e. having leading zeros). PHP misses the leading zero for the day, though.

Note that due to the nature of the bug, it is only reproducable in the first 9 days of a month. :)


Reproduce code:
---------------
<?php
  session_cache_limiter('public');
  set_time_limit(600);
  session_start();
?>
<html><body>foo</body></html>


Expected result:
----------------
Expires: Sun, 07 Dec 2003 16:57:31 GMT
Cache-Control: public, max-age=10800
Last-Modified: Sun, 07 Dec 2003 13:57:28 GMT


Actual result:
--------------
Expires: Sun, 7 Dec 2003 16:57:31 GMT
Cache-Control: public, max-age=10800
Last-Modified: Sun, 7 Dec 2003 13:57:28 GMT

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-12-07 09:11 UTC] derick@php.net
I'll check the RFC and fix the bug if there is one ...
 [2003-12-07 09:26 UTC] derick@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 19:00:01 2026 UTC