- Fixed bug #26548 (Malformed HTTP dates in headers).